--- a/package.json
+++ b/package.json
@@ -11,19 +11,95 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@toruslabs/react-native-web-browser": "^1.1.0",
+    "@tradle/react-native-http": "^2.0.0",
     "@web3-onboard/injected-wallets": "^2.10.13",
     "@web3-onboard/react": "^2.8.14",
+    "@web3auth/react-native-sdk": "^5.1.0",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^4.9.1",
+    "dns.js": "^1.0.1",
     "ethers": "^6.11.1",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "https-browserify": "^0.0.1",
+    "node-libs-react-native": "^1.2.1",
+    "punycode": "^1.2.4",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-crypto": "^2.2.0",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-level-fs": "^3.0.0",
+    "react-native-os": "^1.0.1",
+    "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-tcp": "^3.2.1",
+    "react-native-udp": "^2.1.0",
+    "react-native-vector-icons": "^10.0.3",
+    "readable-stream": "^1.0.33",
+    "rn-nodeify": "^10.3.0",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "^0.10.31",
+    "timers-browserify": "^1.0.1",
+    "url": "^0.10.3",
+    "vm-browserify": "^0.0.4",
+    "web3": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  }
 }
